--- a/uvm-lib/servlets/reports/root/WEB-INF/web.xml
+++ b/uvm-lib/servlets/reports/root/WEB-INF/web.xml
@@ -39,6 +39,21 @@ PUBLIC "-//Sun Microsystems, Inc.//DTD Web Application 2.2//EN"
     <url-pattern>/csv</url-pattern>
   </servlet-mapping>
 
+  <servlet>
+    <servlet-name>JSONRPCServlet</servlet-name>
+    <servlet-class>com.untangle.uvm.reports.jabsorb.UtJsonRpcServlet</servlet-class>
+    <init-param>
+      <param-name>gzip_threshold</param-name>
+      <param-value>200</param-value>
+    </init-param>
+  </servlet>
+
+  <servlet-mapping>
+    <servlet-name>JSONRPCServlet</servlet-name>
+    <url-pattern>/JSON-RPC</url-pattern>
+  </servlet-mapping>
+
+
   <welcome-file-list>
     <welcome-file>
       index.jsp
