enable reports realm
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/src@24856 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/uvm-lib/servlets/reports/apache.conf
+++ b/uvm-lib/servlets/reports/apache.conf
@@ -2,7 +2,7 @@ JkMount /reports* uvmWorker
 
 <Location /reports>
     AuthType Basic
-    AuthName "Administrator"
+    AuthName "Reports"
     require valid-user
 
     <IfModule mod_auth_basic.c>
@@ -13,7 +13,7 @@ JkMount /reports* uvmWorker
         AuthPAM_Enabled Off
     </IfModule>
 
-    PythonOption Realm Administrator
+    PythonOption Realm Reports
     PythonAuthenHandler uvmlogin
     PythonHeaderParserHandler uvmlogin
 </Location>
